--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pygments-markdown-lexer==0.1.0.dev39
 pyOpenSSL==20.0.1
 python-dotenv==0.17.1
 requests==2.25.1
+schedule==1.1.0
 six==1.16.0
 slackclient==1.3.2
 soupsieve==2.2.1
